# LPCVC26-Track1App

./: .gitattributes  .gitignore  README.md  Track1_GIT_README.md  build.gradle  settings.gradle
src/main/: AndroidManifest.xml
src/main/assets/data/: dataset.json
src/main/assets/htp_config/: qualcomm-snapdragon-8-gen5.json
src/main/assets/models/: image_encoder.dlc  text_encoder.dlc
src/main/cpp/: CMakeLists.txt  cosine_similarity.cpp  cosine_similarity.hpp  qnn_helper.cpp  qnn_helper.hpp  qnn_image_encoder.cpp  qnn_text_encoder.cpp  retrieval_engine.cpp
src/main/java/com/quicinc/chatapp/: DashboardActivity.java  InfoActivity.java  RetrievalActivity.java  RetrievalEngine.java
src/main/res/layout/: activity_dashboard.xml  activity_info.xml  activity_retrieval.xml  item_dashboard_result.xml
src/main/res/menu/: menu_main.xml
src/main/res/values/: ic_launcher_background.xml  strings.xml
